--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,11 +3,13 @@
 <head>
     <title>System Dashboard</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="/css/font-awesome.min.css" />
     <script src="/js/jquery-1.12.4.js"></script>
+    <script src="/js/jquery.cookie.js"></script>
     <script src="/js/sockjs-1.1.1.js"></script>
     <script src="/js/stomp.js"></script>
     <script src="/js/angular.js"></script>
