--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -81,8 +81,8 @@
                                 <div class="form-group" ng-show="user.mode.register &amp;&amp; user.show_password">
                                     <input type="text" ng-model="user.confirm_password" class="form-control" placeholder="Repeat Password" />
                                 </div>
-                                <div class="form-group checkbox pull-right">
-                                    <label>
+                                <div class="form-group checkbox">
+                                    <label class="pull-right">
                                         <input type="checkbox" ng-model="user.show_password" /> Show Password
                                     </label>
                                 </div>
